added typings, switched to SASS by default

--- a/src/client/assets/main.scss
+++ b/src/client/assets/main.scss
@@ -1,35 +1,34 @@
+@import 'variables';
+@import 'colors';
+
 /* Reset */
-html,
-body,
-div {
+html, body, div {
   border: 0;
   margin: 0;
   padding: 0;
 }
 
 /* Box-sizing border-box */
-* {
-  box-sizing: border-box;
-}
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 /* Set up a default font and some padding to provide breathing room */
 body {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  font-size: 16px;
+  font-family: $md-font-family;
+  font-size: $md-body-font-size-base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 p {
   font-weight: 400;
-  letter-spacing: 0.01em;
+  letter-spacing: 0.010em;
   line-height: 20px;
   margin-bottom: 1em;
   margin-top: 1em;
 }
 
 ul {
-  margin: 10px 0 0;
+  margin: 10px 0 0 0;
   padding: 0 0 0 20px;
 }
 
@@ -39,7 +38,7 @@ li {
 }
 
 input {
-  border: 1px solid #106cc8;
+  border: 1px solid md-color($app-blue, 500);
   font-size: 14px;
   height: 40px;
   outline: none;
@@ -47,9 +46,9 @@ input {
 }
 
 button {
-  background-color: #106cc8;
+  background-color: md-color($app-blue, 500);
   border-style: none;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255,255,255,0.87);
   cursor: pointer;
   display: inline-block;
   font-size: 14px;
@@ -59,5 +58,5 @@ button {
 }
 
 button:hover {
-  background-color: #28739e;
+  background-color: md-color($app-blue, 400);
 }
